2 papers on arXiv + Arto Maranjyan

--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,16 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [195] Motasem Alfarra, Juan C. Pérez, Egor Shulgin, Peter Richtárik and Bernard Ghanem <br>
+          <b>Certified robustness in federated learning</b><br>
+          [<a href="https://arxiv.org/abs/2206.02535">arXiv</a>] <br>
+          <br>
+
+          [194] Alexander Tyurin, Lukang Sun, Konstantin Burlachenko and Peter Richtárik<br>
+          <b>Sharper rates and flexible framework for nonconvex SGD with client and data sampling</b><br>
+          [<a href="https://arxiv.org/abs/2206.02275">arXiv</a>] [code: PAGE] <br>
+          <br>
+
           [193] Lukang Sun, Adil Salim and Peter Richtárik<br>
           <b>Federated learning with a sampling algorithm under isoperimetry</b><br>
           [<a href="https://arxiv.org/abs/2206.00920">arXiv</a>] [code: Langevin-Marina] <br>
