--- a/index.html
+++ b/index.html
@@ -72,6 +72,44 @@ Federated learning uses a set of techniques to efficiently distribute the traini
 
 
 <h3>June 1, 2022</h3>
+<h1>A New Research Intern: Arto Maranjyan</h1>
+<br>
+
+
+Artavazd "Arto" Maranjyan [<a href="https://www.researchgate.net/profile/Artavazd-Maranjyan">ResearchGate</a>]
+[<a href="https://publons.com/researcher/4267694/artavazd-maranjyan/">publons</a>]
+[<a href="https://www.linkedin.com/in/arto-maranjyan/?originalSubdomain=am">LinkedIn</a>] joined my Optimization and Machine Learning Lab as
+a <a href="https://vsrp.kaust.edu.sa">VSRP intern</a>. His internship started on June 1, and will last for 6 months. Arto is a first year MS
+student in Applied Mathematics and Statistics at <a href="https://en.wikipedia.org/wiki/Yerevan_State_University">Yerevan State University, Armenia</a>.
+Parts of his BS thesis entitled
+"On the Convergence of Series in Classical Systems", supervised by Prof. Martin Grigoryan, have been published as separate papers:
+<ul>
+<li> On the divergence of Fourier series in the general Haar system, <a href="http://armjmath.sci.am/index.php/ajm/article/view/533">Armenian Journal of Mathematics 13(6):1-10, 2021</a>,</li>
+<li> On the unconditional convergence of Faber-Schauder series in L1, <a href="https://journals.ysu.am/index.php/proceedings-phys-math/article/view/vol55_no1_2021_pp012-019">Proceedings of the
+  Yerevan State University 55(254):12-19, 2021</a>,</li>
+<li> Problems of recovering from the Fourier-Vilenkin series (unpublished).</li>
+</ul>
+
+Arto was one of 6 out of 250 YSU students receiving an Outstanding Final Project Award. Arto gained practical and theoretical knowledge in machine
+learning, deep learning, natural language processing, and computer vision during a year-long AI training with the
+<a href="https://fast.foundation">Foundation for Armenian Science and
+Technology (FAST)</a>.
+<br>
+
+<br>
+Welcome to the team!!!
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
+<h3>June 1, 2022</h3>
 
 <h1>New Paper</h1>
 
