--- a/index.html
+++ b/index.html
@@ -44,6 +44,47 @@
         <div id="content">
 
 
+
+
+<h3>June 5, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2206.02275">
+"Sharper Rates and Flexible Framework for Nonconvex SGD with Client and Data Sampling"</a> -
+joint work with
+<a href="https://k3nfalt.github.io">Alexander Tyurin</a>, <a href="https://lukangsun.github.io">Lukang Sun</a> and <a href="https://burlachenkok.github.io/home">Konstantin Burlachenko</a>.
+
+<br>
+<br>
+Abstract:
+<i>
+We revisit the classical problem of finding an approximately stationary point of the average of n smooth and possibly nonconvex functions.
+The optimal complexity of stochastic first-order methods in terms of the number of gradient evaluations of individual functions is
+O(n+√n/ε), attained by the optimal SGD methods 𝖲𝖯𝖨𝖣𝖤𝖱 [Fang et al, NeurIPS 2018] and 𝖯𝖠𝖦𝖤 [Zhize et al, ICML 2021], for example, 
+where ε is the error tolerance. However, i) the big-O notation hides crucial dependencies on the smoothness constants associated with the functions,
+and ii) the rates and theory in these methods assume simplistic sampling mechanisms that do not offer any flexibility. In this work we remedy the
+situation. First, we generalize the 𝖯𝖠𝖦𝖤 algorithm so that it can provably work with virtually any (unbiased) sampling mechanism. This is particularly
+useful in federated learning, as it allows us to construct and better understand the impact of various combinations of client and data sampling strategies.
+Second, our analysis is sharper as we make explicit use of certain novel inequalities that capture the intricate interplay between the smoothness
+constants and the sampling procedure. Indeed, our analysis is better even for the simple sampling procedure analyzed in the 𝖯𝖠𝖦𝖤 paper.
+However, this already improved bound can be further sharpened by a different sampling scheme which we propose. In summary, we provide the most
+general and most accurate analysis of optimal SGD in the smooth nonconvex regime. Finally, our theoretical findings are supposed with carefully
+designed experiments.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
 <h3>June 2, 2022</h3>
 
 <h1>New Paper</h1>
