--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,11 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [196] Rustem Islamov, Xun Qian, Slavomír Hanzely, Mher Safaryan and Peter Richtárik <br>
+          <b>Distributed Newton-type methods with communication compression and Bernoulli aggregation</b><br>
+          [<a href="https://arxiv.org/abs/2206.03588">arXiv</a>] [Newton-3PC, Newton-3PC-BC, Newton-3PC-BC-PP] <br>
+          <br>
+
           [195] Motasem Alfarra, Juan C. Pérez, Egor Shulgin, Peter Richtárik and Bernard Ghanem <br>
           <b>Certified robustness in federated learning</b><br>
           [<a href="https://arxiv.org/abs/2206.02535">arXiv</a>] <br>
