--- a/i_talks.html
+++ b/i_talks.html
@@ -80,9 +80,11 @@ Introduction to Machine Learning 1/2, Aramco, November 3-6, 2022
 <a href="https://icml.cc/Conferences/2022">ICML 2022</a>, Baltimore, Maryland, USA, July 17-23, 2022
 </p>
 
+<!---
 <p>
 <a href="https://orcos.tuwien.ac.at/events/vc2022/">15th Viennese Conference on Optimal Control and Dynamic Games</a>, Session: Continuous Optimization: Theory and Applications (organized by Bot and Daniilidis), Vienna, Austria, July 12-15, 2022 (invited)
 </p>
+--->
 
 <p>
 Better AI Meetup, Bratislava, Slovakia, June 22, 2022 (invited)
@@ -96,15 +98,7 @@ PhD Course "Introduction to Stochastic Gradient Descent" (22.5 hrs), <a href="ht
 <a href="http://www.mathdatalab.org">Mathematics of Complex Data</a>, KTH Royal Institute of Technology, Stockholm, Sweden, June 13-16, 2022 (invited)
 </p>
 
-<p>
-PhD Course "Introduction to Stochastic Gradient Descent" (18 hrs), Vienna Graduate School for Computational Optimization (VGSCO), Vienna, Austria, May 30-June 3, 2022 (invited)
-</p>
 
-<p> <a href="https://cemse.kaust.edu.sa/events/event/snsl-workshop">Stochastic Numerics and Statistical Learning: Theory and Applications Workshop,</a> KAUST, Saudi Arabia, May 15-28, 2022 (invited)
-</p>
-
-<p> <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar (FLOW)</a>, Virtual seminar, May 4, 2022
-</p>
 
 <!--- <p> Spring School, <a href="https://ai-dd.eu">Advanced machine learning for Innovative Drug Discovery (AIDD)</a>,
 Università della Svizzera italiana, Lugano, Switzerland, May 9, 2022 (invited lecture)
@@ -116,6 +110,16 @@ Università della Svizzera italiana, Lugano, Switzerland, May 9, 2022 (invited l
 
 
 <h1>2022 Talks</h1>
+
+<p>
+[206] PhD Course "Introduction to Stochastic Gradient Descent" (18 hrs), Vienna Graduate School for Computational Optimization (VGSCO), Vienna, Austria, May 30-June 3, 2022 (invited)
+</p>
+
+<p> [205]  <a href="https://cemse.kaust.edu.sa/events/event/snsl-workshop">Stochastic Numerics and Statistical Learning: Theory and Applications Workshop,</a> KAUST, Saudi Arabia, May 15-28, 2022 (invited)
+</p>
+
+<p> [204] <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar (FLOW)</a>, Virtual seminar, May 4, 2022
+</p>
 
 <p> [203] Department of Mathematics Colloquium, Penn State University, USA, April 27, 2022 (invited)
 </p>
