--- a/i_papers.html
+++ b/i_papers.html
@@ -53,9 +53,14 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [197] Abdurakhmon Sadiev, Grigory Malinovsky, Eduard Gorbunov, Igor Sokolov, Ahmed Khaled, Konstantin Burlachenko and Peter Richtárik <br>
+          <b>Federated optimization algorithms with random reshuffling and gradient compression</b><br>
+          [<a href="https://arxiv.org/abs/2206.07021">arXiv</a>] [code: Q-RR, DIANA-RR, Q-NASTYA, DIANA-NASTYA] <br>
+          <br>
+
           [196] Rustem Islamov, Xun Qian, Slavomír Hanzely, Mher Safaryan and Peter Richtárik <br>
           <b>Distributed Newton-type methods with communication compression and Bernoulli aggregation</b><br>
-          [<a href="https://arxiv.org/abs/2206.03588">arXiv</a>] [Newton-3PC, Newton-3PC-BC, Newton-3PC-BC-PP] <br>
+          [<a href="https://arxiv.org/abs/2206.03588">arXiv</a>] [code: Newton-3PC, Newton-3PC-BC, Newton-3PC-BC-PP] <br>
           <br>
 
           [195] Motasem Alfarra, Juan C. Pérez, Egor Shulgin, Peter Richtárik and Bernard Ghanem <br>
