--- a/i_talks.html
+++ b/i_talks.html
@@ -50,7 +50,7 @@
 
 <p>
 <a href="https://ims.nus.edu.sg/events/optimization-in-the-big-data-era/">Optimization in the Big Data Era</a>, Institute
-for Mathematical Sciences, National University of Singapore, Singapore, November 21 - December 9, 2022 (invited)
+for Mathematical Sciences, National University of Singapore, Singapore, December 5-9, 2022 (invited)
 </p>
 
 <p>
