--- a/index.html
+++ b/index.html
@@ -44,6 +44,56 @@
         <div id="content">
 
 
+<h3>June 15, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2206.07021">
+"Federated Optimization Algorithms with Random Reshuffling and Gradient Compression"</a> - joint work with
+<a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev</a>,
+<a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a>,
+<a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>,
+<a href="https://cemse.kaust.edu.sa/people/person/igor-sokolov">Igor Sokolov</a>,
+<a href="https://rka97.github.io">Ahmed Khaled</a>,
+and
+<a href="https://burlachenkok.github.io/home">Konstantin Burlachenko</a>.
+
+<br>
+<br>
+Abstract:
+<i>
+Gradient compression is a popular technique for improving communication complexity of stochastic first-order methods in distributed training of machine learning models. However, the existing works consider only with-replacement sampling of stochastic gradients. In contrast, it is well-known in practice and recently confirmed in theory that stochastic methods based on without-replacement sampling, e.g., Random Reshuffling (RR) method, perform better than ones that sample the gradients with-replacement. In this work, we close this gap in the literature and provide the first analysis of methods with gradient compression and without-replacement sampling. We first develop a distributed variant of random reshuffling with gradient compression (Q-RR), and show how to reduce the variance coming from gradient quantization through the use of control iterates. Next, to have a better fit to Federated Learning applications, we incorporate local computation and propose a variant of Q-RR called Q-NASTYA. Q-NASTYA uses local gradient steps and different local and global stepsizes. Next, we show how to reduce compression variance in this setting as well. Finally, we prove the convergence results for the proposed methods and outline several settings in which they improve upon existing algorithms.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>June 12, 2022</h3>
+
+<h1>Conference on the Mathematics of Complex Data</h1>
+
+I have just arrived to Stockholm, Sweden, to attend the <a href="https://www.mathdatalab.org/">Conference on the Mathematics of Complex Data.</a>
+This event was supposed to happen in 2020, but as postponed due to the Covid-19 pandemic. My talk is scheduled for Thursday, June 16.
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
 <h3>June 7, 2022</h3>
 
 <h1>New Paper</h1>
