--- a/i_papers.html
+++ b/i_papers.html
@@ -55,31 +55,37 @@
 
           [197] Abdurakhmon Sadiev, Grigory Malinovsky, Eduard Gorbunov, Igor Sokolov, Ahmed Khaled, Konstantin Burlachenko and Peter Richtárik <br>
           <b>Federated optimization algorithms with random reshuffling and gradient compression</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2206.07021">arXiv</a>] [code: Q-RR, DIANA-RR, Q-NASTYA, DIANA-NASTYA] <br>
           <br>
 
           [196] Rustem Islamov, Xun Qian, Slavomír Hanzely, Mher Safaryan and Peter Richtárik <br>
           <b>Distributed Newton-type methods with communication compression and Bernoulli aggregation</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2206.03588">arXiv</a>] [code: Newton-3PC, Newton-3PC-BC, Newton-3PC-BC-PP] <br>
           <br>
 
           [195] Motasem Alfarra, Juan C. Pérez, Egor Shulgin, Peter Richtárik and Bernard Ghanem <br>
           <b>Certified robustness in federated learning</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2206.02535">arXiv</a>] <br>
           <br>
 
           [194] Alexander Tyurin, Lukang Sun, Konstantin Burlachenko and Peter Richtárik<br>
           <b>Sharper rates and flexible framework for nonconvex SGD with client and data sampling</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2206.02275">arXiv</a>] [code: PAGE] <br>
           <br>
 
           [193] Lukang Sun, Adil Salim and Peter Richtárik<br>
           <b>Federated learning with a sampling algorithm under isoperimetry</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2206.00920">arXiv</a>] [code: Langevin-Marina] <br>
           <br>
 
           [192] Eduard Gorbunov, Samuel Horváth, Peter Richtárik and Gauthier Gidel<br>
           <b>Variance reduction is an antidote to Byzantines: better rates, weaker assumptions and communication compression as a cherry on the top</b><br>
+          <span class="important">Federated Learning Paper</span><br>          
           [<a href="https://arxiv.org/abs/2206.00529">arXiv</a>] [code: Byz-VR-MARINA] <br>
           <br>
 
