--- a/i_team.html
+++ b/i_team.html
@@ -83,6 +83,10 @@
 
           <ul>
 
+            <li><a href="https://cemse.kaust.edu.sa/people/person/igor-sokolov">Igor Sokolov</a> (6/2022-present), KAUST
+              <a href="https://scholar.google.com/citations?hl=en&user=OBbPecwAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+            </li>
+
             <li><a href="https://kaiyi.me">Kai Yi</a> (1/2022-present), KAUST
               <a href="https://scholar.google.com/citations?user=r08j39wAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
@@ -125,11 +129,9 @@
 
           <h2>MS Students </h2>
 
-          <ul>
-            <li><a href="https://cemse.kaust.edu.sa/people/person/igor-sokolov">Igor Sokolov</a> (8/2020-present), KAUST
-              <a href="https://scholar.google.com/citations?hl=en&user=OBbPecwAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
-            </li>
-          </ul>
+                <ul>
+                </ul>
+
 
 
           <h2>Research Interns</h2>
@@ -138,8 +140,8 @@
 
             <li><a href="https://www.linkedin.com/in/omar-shaikh-omar-998970176/">Omar Shaikh Omar</a> (7/2022-8/2022), from University of Washington </li>
             <li><a href="https://www.linkedin.com/in/michał-grudzień-2141a2198/?originalSubdomain=uk">Michał Grudzień</a> (7/2022-10/2022), from University of Oxford </li>
-            <li>Kaja Gruntkowska (7/2022-9/2022), from University of Warwick </li>
             <li><a href="https://www.researchgate.net/profile/Wenzhi-Fang">Wenzhi (Tom) Fang</a> (6/2022-12/2022), from ShanghaiTech University </li>
+            <li>Kaja Gruntkowska (6/2022-9/2022), from University of Warwick </li>            
             <li><a href="https://www.linkedin.com/in/arto-maranjyan/?originalSubdomain=am">Arto Maranjyan</a> (6/2022-11/2022), from Yerevan State University </li>
             <li><a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev</a> (2/2022-present), from MIPT <a href="https://scholar.google.com/citations?hl=en&user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a></li>
 
@@ -149,9 +151,6 @@
           <h2>Visitors</h2>
 
           <ul>
-            <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (03/2022-present), KAUST <a href="https://scholar.google.com/citations?user=85j2RqQAAAAJ&hl=en"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a><br>
-            <i>current position: postdoc, MILA, Canada</i></li>
-
           </ul>
 
 
@@ -316,8 +315,12 @@
 
           <ul>
 
+            <li><a href="https://cemse.kaust.edu.sa/people/person/igor-sokolov">Igor Sokolov</a> (8/2020-05/2022), KAUST
+                <br> <i>current position: PhD Student, KAUST</i>
+            </li>
+
             <li><a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (8/2020-12/2021), KAUST
-                <br> <i>current position: PhD Student, KAUST</i> </li>
+              </li>
 
             <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (1/2020-8/2021), KAUST
                 <br> <i>current position: PhD Student, KAUST</i> </li>
@@ -460,6 +463,7 @@
           <h2>Visitors</h2>
 
           <ul>
+            <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (MILA, Montréal), 3/2022-6/2022</li>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL), 11/2019</li>
             <li><a href="https://grishchenko.org">Dmitriy Grishchenko</a> (Grenoble), 11-12/2019</li>
             <li><a href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xiuxian Li</a> (Nanyang Technological University), 9/2019</li>
@@ -476,31 +480,22 @@
             <li><a href="https://gowerrobert.github.io/">Robert Gower</a> (Télécom ParisTech), 10/2017</li>
             <li><a href="https://doikov.com">Nikita Doikov</a> (HSE Moscow), 10/2017-11/2017</li>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL), 10/2017</li>
-            <li> <a href="http://mtakac.com">Martin Takáč</a> (Lehigh), 5/2017</li>
+            <li><a href="http://mtakac.com">Martin Takáč</a> (Lehigh), 5/2017</li>
             <li><a href="https://cemse.kaust.edu.sa/people/person/alibek-sailanbayev">Alibek Sailanbayev</a> (Nazarbayev University), 4/2017</li>
             <li><a href="http://jakubkonecny.com">Jakub Konečný</a> (Edinburgh), 4/2017</li>
             <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
             <li><a href="https://grishchenko.org">Dmitriy Grishchenko</a> (HSE Moscow), 4/2017</li>
             <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (ENS/Paris Dauphine), 4/2017</li>
             <li><a href="https://nicolasloizou.github.io/">Nicolas Loizou</a> (Edinburgh), 3/2017-5/2017</li>
-
-
-            <li><a
-                href="http://esd.sutd.edu.sg/faculty/selin-damla-ahipasaoglu/">Selin
-D. Ahipasaoglu</a> (LSE / SUTD)</li>
-            <li><a
-                href="https://www.math.uzh.ch/index.php?id=1821&amp;L=1&amp;key1=4980">Michel Baes</a> (University of Zurich)</li>
-
-            <li><a href="http://maiage.jouy.inra.fr/?q=fr/bergou">El
-                Houcine Bergou</a> (INRA)</li>
+            <li><a href="http://esd.sutd.edu.sg/faculty/selin-damla-ahipasaoglu/">Selin D. Ahipasaoglu</a> (LSE / SUTD)</li>
+            <li><a href="https://www.math.uzh.ch/index.php?id=1821&amp;L=1&amp;key1=4980">Michel Baes</a> (University of Zurich)</li>
+            <li><a href="http://maiage.jouy.inra.fr/?q=fr/bergou">El Houcine Bergou</a> (INRA)</li>
             <li><a href="https://sites.google.com/site/armineftekhari/">Armin Eftekhari</a> (The Alan Turing Institute)</li>
-
             <li><a href="http://www.damtp.cam.ac.uk/people/me404/">Matthias Ehrhardt</a> (Cambridge)</li>
             <li><a href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav Harman</a> (Bratislava)</li>
             <li><a href="http://www.lix.polytechnique.fr/%7Evu/">Vu Khac Ky </a>(Ecole Polytechnique)</li>
             <li><a href="http://acse.pub.ro/person/ion-necoara/">Ion Necoara</a> (Bucharest)</li>
-            <li><a
-                href="http://scholar.google.com/citations?user=DJ8Ep8YAAAAJ&amp;hl=en">Yurii Nesterov</a> (Louvain)</li>
+            <li><a href="http://scholar.google.com/citations?user=DJ8Ep8YAAAAJ&amp;hl=en">Yurii Nesterov</a> (Louvain)</li>
             <li><a href="https://www.researchgate.net/profile/Tie_Ni">Tie Ni</a> (Liaoning Technical University)</li>
             <li><a
                 href="http://www-syscom.univ-mlv.fr/%7Epesquet/index.htm">Jean-Christophe Pesquet</a> (Paris-Est)</li>
