--- a/index.html
+++ b/index.html
@@ -44,6 +44,80 @@
         <div id="content">
 
 
+<h3>June 27, 2022</h3>
+
+<h1>Samuel Horváth defended his PhD thesis today!</h1>
+
+Today, my PhD student <a href="https://samuelhorvath.github.io">Samuel Horváth</a>
+<br>
+<br>
+<img alt="Dr Samuel Horváth" src="imgs/Samuel.jpg" width="200">
+<br>
+<br>
+
+defended his PhD thesis entitled <b>Better Methods and Theory for Federated Learning: Compression, Client Selection, and Heterogeneity.</b> <br><br>
+
+
+His PhD thesis committee members were:
+<a href="https://www.avestimehr.com/">Salman Avestimehr</a> (University of Southern California and FedML), <a href="https://mcanini.github.io/">Marco Canini</a> (KAUST),
+<a href="https://www.kaust.edu.sa/en/study/faculty/marc-genton">Marc G. Genton</a> (KAUST),
+<a href="https://ai.facebook.com/people/michael-rabbat">Mike Rabbat</a> (Facebook AI Research) and myself as the advisor and committee chair.
+<br>
+
+<br>
+<img alt="" src="imgs/Samuel-defense-Zoom.png" width="700">
+<br>
+<br>
+
+Samuel joined my <a href="https://richtarik.org/i_team.html">Optimization and Machine Learning Lab</a> at KAUST in August 2017 as an MS/PhD student, right after completing his BS in Financial Mathematics at <a href="https://uniba.sk/en/">Comenius University, Bratislava,
+Slovakia</a>, ranked #1 in the program. He obtained his MS degree in Statistics at KAUST in December 2018.
+
+<br>
+<br>
+Interestingly, Samuel came to KAUST just 5 months after I joined KAUST in March 2017!
+<br>
+<br>
+
+Samuel has gone a long way since then; <a href="https://samuelhorvath.github.io/files/cv.pdf">look at his CV</a>!  His post-2017 accomplishments include:
+<br>
+<br>
+
+<ul>
+<li> Accepted the position of an Assistant Prof at <a href="https://mbzuai.ac.ae">MBZUAI, Abu Dhabi, United Arab Emirates</a>, about to start in Fall 2022</li>
+<li> Co-authored <a href="https://scholar.google.com/citations?user=k252J7kAAAAJ">20 papers during his PhD</a></li>
+<li> h index = 11, with 600+ citations according to <a href="https://scholar.google.com/citations?user=k252J7kAAAAJ">Google Scholar</a> </li>
+<li> 3 industrial internships during his PhD (Amazon AWS, Samsung AI and Facebook) </li>
+<li> <b>Al‐Kindi Statistics Research Student Award</b> (research award for top Statistics PhD student at KAUST), 2021 </li>
+<li> <b>Spotlight Paper at NeurIPS 2021</b> for the first-author paper <a href="https://openreview.net/forum?id=4fLr7H5D_eT">FjORD: Fair and Accurate Federated Learning Under Heterogeneous Targets with Ordered Dropout</a> </li>
+<li> Progress Towards PhD rated as “Outstanding”, KAUST, in years 2019, 2020 and 2021 </li>
+<li> <b>Best Paper Award (+ 1,888 USD cash prize) at the NeurIPS 2020 Spicy Federated Learning Workshop</b> for the paper <a href="https://openreview.net/pdf?id=vYVI1CHPaQg">A Better Alternative to Error Feedback for Communication‐Efficient Distributed Learning</a>, later published in ICLR 2021</li>
+<li> <b>Best Reviewer Award (Top 10%) @ NeurIPS 2020</b> </li>
+<li> <b>Spotlight paper at the NeuriPS 2020 Optimization for Machine Learning Workshop</b> for the first-authored paper <a href="https://epubs.siam.org/doi/abs/10.1137/21M1394308?journalCode=sjmdaq">Adaptivity of Stochastic Gradient Methods for Nonconvex Optimization</a>, later published by SIAM J on Mathematics of Data Science </a>
+<li> <b>Oral Paper at the NeuriPS 2020 Workshop on Scalability, Privacy, and Security in Federated Learning</b> for the paper <a href="https://arxiv.org/abs/2002.12410">On Biased Compression for Distributed Learning</a> </li>
+<li> Accepted to Machine Learning Summer School (MLSS) 2020, Tübingen (acceptance rate 180/1300+); also accepted to MLSS 2020 Indonesia </li>
+<li> <b>Top Reviewer Award @ NeurIPS 2019</b> </li>
+<li> <b>Best Poster Prize</b> for the paper <a href="https://arxiv.org/abs/1904.05115">Stochastic Distributed Learning with Gradient Quantization and Variance Reduction</a> at the Control, Information and Optimization Summer School, Voronovo, Russia (organized by B. Polyak). The poster was presented by coauthor D. Kovalev.
+<li> 157th/4049, IEEEXtreme 24‐Hour Programming Competition 12.0 joint with Dmitry Kovalev, 2018 </li>
+<li> <b>Best Poster Prize</b> (+ 500 EUR cash prize) for a poster based on the paper <a href="http://proceedings.mlr.press/v97/horvath19a.html">Nonconvex Variance Reduced Optimization with Arbitrary Sampling</a>, awarded as one of 2 out of total 170 posters presented at the Data Science Summer School (DS3), École Polytechnique, 2018  </li>
+<li> 131st /3,350 place, IEEEXtreme 24‐Hour Programming Competition 11.0 joint with Konstantin Mishchenko, 2017 </li>
+</ul>
+
+<br>
+Samuel is very unique in that he is at the same time highly talented (in science and sports), hard-working, has impeccable work ethics, and is incredibly humble and down-to-earth. An amazing person to work with!
+
+<br> <br>
+Dr Samuel Horváth, and soon-to-become Prof Samuel Horváth: all the best in your new adventures in Abu Dhabi!
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
 <h3>June 15, 2022</h3>
 
 <h1>New Paper</h1>
