--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Samuel has gone a long way since then; <a href="https://samuelhorvath.github.io/
 <br>
 
 <ul>
-<li> Accepted the position of an Assistant Prof at <a href="https://mbzuai.ac.ae">MBZUAI, Abu Dhabi, United Arab Emirates</a>, about to start in Fall 2022</li>
+<li> Accepted the position of an <b>Assistant Prof</b> at <a href="https://mbzuai.ac.ae">MBZUAI, Abu Dhabi, United Arab Emirates</a>, about to start in Fall 2022</li>
 <li> Co-authored <a href="https://scholar.google.com/citations?user=k252J7kAAAAJ">20 papers during his PhD</a></li>
 <li> h index = 11, with 600+ citations according to <a href="https://scholar.google.com/citations?user=k252J7kAAAAJ">Google Scholar</a> </li>
 <li> 3 industrial internships during his PhD (Amazon AWS, Samsung AI and Facebook) </li>
