--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,24 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [200] Egor Shulgin and Peter Richtárik <br>
+          <b>Shifted compression framework: generalizations and improvements</b><br>
+          38th Conference on Uncertainty in Artificial Intelligence (UAI 2022) <br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2206.10452">arXiv</a>] [code: DCGD-SHIFT] <br>
+          <br>
+
+          [199] Lukang Sun and Peter Richtárik <br>
+          <b>A Note on the convergence of mirrored Stein variational gradient descent under (L_0,L_1) smoothness condition</b><br>
+          [<a href="https://arxiv.org/abs/2206.09709">arXiv</a>] [code: MSVGD] <br>
+          <br>
+
+          [198] Abdurakhmon Sadiev, Grigory Malinovsky, Eduard Gorbunov, Igor Sokolov, Ahmed Khaled, Konstantin Burlachenko and Peter Richtárik <br>
+          <b>Federated optimization algorithms with random reshuffling and gradient compression</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2206.07021">arXiv</a>] [code: Q-RR, DIANA-RR, Q-NASTYA, DIANA-NASTYA] <br>
+          <br>
+
           [197] Abdurakhmon Sadiev, Grigory Malinovsky, Eduard Gorbunov, Igor Sokolov, Ahmed Khaled, Konstantin Burlachenko and Peter Richtárik <br>
           <b>Federated optimization algorithms with random reshuffling and gradient compression</b><br>
           <span class="important">Federated Learning Paper</span><br>
@@ -85,7 +103,7 @@
 
           [192] Eduard Gorbunov, Samuel Horváth, Peter Richtárik and Gauthier Gidel<br>
           <b>Variance reduction is an antidote to Byzantines: better rates, weaker assumptions and communication compression as a cherry on the top</b><br>
-          <span class="important">Federated Learning Paper</span><br>          
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2206.00529">arXiv</a>] [code: Byz-VR-MARINA] <br>
           <br>
 
@@ -267,6 +285,7 @@
 
           [163] Laurent Condat and Peter Richtárik<br>
           <b>MURANA: A generic framework for stochastic variance-reduced optimization</b><br>
+          Mathematical and Scientific Machine Learning 2022 (MSML 2022) <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2106.03056">arXiv</a>] [code: MURANA, ELVIRA]<br>
           <br>
@@ -694,6 +713,7 @@
           [100] Samuel Horváth, Chen-Yu Ho, Ľudovít Horváth, Atal
           Narayan Sahu, Marco Canini and Peter Richtárik<br>
           <b>Natural compression for distributed deep learning</b><br>
+          Mathematical and Scientific Machine Learning 2022 (MSML 2022) <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/1905.10988">arXiv</a>] [<a
             href="posters/Poster-Cnat.pdf">poster</a>]<br>
