--- a/index.html
+++ b/index.html
@@ -44,6 +44,63 @@
         <div id="content">
 
 
+<h3>June 21, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2206.10452">
+"Shifted Compression Framework: Generalizations and Improvements"</a> - joint work with
+<a href="https://rustem-islamov.github.io">Egor Shulgin</a>. An earlier version of this paper appeared
+in <a href="https://opt-ml.org/papers/2021/paper20.pdf">OPT2021: 13th Annual Workshop on Optimization for Machine Learning.</a>
+The final version was recently accepted to the <a href="https://www.auai.org/uai2022/">38th Conference on Uncertainty in Artificial Intelligence (UAI 2022)</a>.
+
+
+<br>
+<br>
+Abstract:
+<i>
+Communication is one of the key bottlenecks in the distributed training of large-scale machine learning models, and lossy compression of exchanged information, such as stochastic gradients or models, is one of the most effective instruments to alleviate this issue. Among the most studied compression techniques is the class of unbiased compression operators with variance bounded by a multiple of the square norm of the vector we wish to compress. By design, this variance may remain high, and only diminishes if the input vector approaches zero. However, unless the model being trained is overparameterized, there is no a-priori reason for the vectors we wish to compress to approach zero during the iterations of classical methods such as distributed compressed SGD, which has adverse effects on the convergence speed. Due to this issue, several more elaborate and seemingly very different algorithms have been proposed recently, with the goal of circumventing this issue. These methods are based on the idea of compressing the difference between the vector we would normally wish to compress and some auxiliary vector which changes throughout the iterative process. In this work we take a step back, and develop a unified framework for studying such methods, conceptually, and theoretically. Our framework incorporates methods compressing both gradients and models, using unbiased and biased compressors, and sheds light on the construction of the auxiliary vectors. Furthermore, our general framework can lead to the improvement of several existing algorithms, and can produce new algorithms. Finally, we performed several numerical experiments which illustrate and support our theoretical findings.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>June 20, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2206.09709">
+"A Note on the Convergence of Mirrored Stein Variational Gradient Descent under (L0,L1)−Smoothness Condition"</a> - joint work with
+<a href="https://lukangsun.github.io/">Lukang Sun</a>.
+
+
+<br>
+<br>
+Abstract:
+<i>
+In this note, we establish a descent lemma for the population limit Mirrored Stein Variational Gradient Method (MSVGD).
+This descent lemma does not rely on the path information of MSVGD but rather on a simple assumption for the mirrored distribution.
+Our analysis demonstrates that MSVGD can be applied to a broader class of constrained sampling problems with non-smooth V. We also
+investigate the complexity of the population limit MSVGD in terms of dimension d.</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>June 27, 2022</h3>
 
 <h1>Samuel Horváth defended his PhD thesis today!</h1>
