--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <span class="important">New paper out:</span>
 <a href="https://arxiv.org/abs/2206.10452">
 "Shifted Compression Framework: Generalizations and Improvements"</a> - joint work with
-<a href="https://rustem-islamov.github.io">Egor Shulgin</a>. An earlier version of this paper appeared
+<a href="https://shulgin-egor.github.io">Egor Shulgin</a>. An earlier version of this paper appeared
 in <a href="https://opt-ml.org/papers/2021/paper20.pdf">OPT2021: 13th Annual Workshop on Optimization for Machine Learning.</a>
 The final version was recently accepted to the <a href="https://www.auai.org/uai2022/">38th Conference on Uncertainty in Artificial Intelligence (UAI 2022)</a>.
 
